MacViews: Don't set window's alpha to 0 if window is already visible.

Currently repeated calls to Show() a Widget cause a flash. This is because of
flag initial_visibility_suppressed_ in BridgedNativeWidget which was added in
r417863 to show some dialogs with an alpha value of 0 initially, till the
frames from the compositor arrive.

See http://crbug.com/623950#c18

To fix the problem this patch adds an additional check, so this logic would be
applied only if window isn't already visible.

BUG=654961

Review-Url: https://codereview.chromium.org/2407153004
Cr-Commit-Position: refs/heads/master@{#424974}

Former-commit-id: 2b3fd8fa7e745eda9e69f49190f372aba03687d7